--- a/slides/slides.qmd
+++ b/slides/slides.qmd
@@ -964,7 +964,18 @@ BC Developer Guide: [https://developer.gov.bc.ca](https://developer.gov.bc.ca/do
 
 :::
 
+::: notes
+The BC Developer guide is a living guide to application development for the B.C government, updated regularly by the Developer Experience team. Written for all ministries, use it to guide your team's technical decisions and as a reference throughout the software lifecycle.
 
+It contains a section that  
+
+  - gives an **Overview of GitHub Organizations**, (bcgov and bcgov-c) and details the purpose and access rules for each organization.  
+  - Describes the SSO setup process for **bcgov** and **bcgov-c** organizations, including requirements for IDIR accounts and steps for linking accounts.  
+  - Step-by-step guides for signing up and linking GitHub accounts to **bcgov** and **bcgov-c**.  
+  - Highlights key requirements like two-factor devices, personal logins, and IDIR credentials.  
+  - Access to supplementary guides, video tutorials, and support request options. 
+
+:::
 
 ## BCGov GitHub Organization {background-image="/figures/section-4-bcgov/bcgov-logo.png" background-size="8%" background-position="85% 6%" transition="fade-in fade-out" style="padding: 0px 0px 0px 0px;"}
 
@@ -988,7 +999,6 @@ BCGov: [https://github.com/bcgov](https://github.com/bcgov)
 BCGov Policy Framework: [https://github.com/bcgov/BC-Policy-Framework-For-GitHub](https://github.com/bcgov/BC-Policy-Framework-For-GitHub)
 
 :::
-
 
 
 ## BCGov GitHub Policy Framework {background-image="/figures/section-4-bcgov/bcgov-logo.png" background-size="8%" background-position="85% 6%" transition="fade-in slide-out"}
