--- a/slides/slides.qmd
+++ b/slides/slides.qmd
@@ -28,9 +28,9 @@ Photo Source: [Mystic Beach, Vancouver Island, Canada 10](https://commons.wikime
 :::
 
 ::: notes
-Let's start with our territorial acknowledgement.  
+I'd like to open today's workshop with a territorial acknowledgement.  
 
-I acknowledge with respect the Coast Salish Peoples on whose traditional lands and waterways we live, learn and play. I am grateful for the opportunity to share in this beautiful region, and I aspire to healthy and respectful relationships with those who have lived on and cared for these lands for a millennia.  (next slide)
+I acknowledge with respect the Coast Salish Peoples on whose traditional lands and waterways we live, learn and play. I am grateful for the opportunity to share in this beautiful region, and I aspire to healthy and respectful relationships with those who have lived on and cared for these lands for a millennia.  (pause and next slide)
 :::
 
 ## Housekeeping
@@ -49,8 +49,8 @@ I acknowledge with respect the Coast Salish Peoples on whose traditional lands a
   - Microphones on mute
   - Getting disconnected
   - Cameras on at first.
+- Course materials
 - Our request: try your best
-- Course Materials
 
 :::
 
@@ -62,7 +62,7 @@ Course Materials: <https://bcgov.github.io/ds-intro-to-git>
 :::
 
 ::: notes
-Let's move on to some housekeeping! (next)
+First, some housekeeping! (next)
 
 As part of today’s workshop, we’ll be coding in real time, working through concepts together on the fly. This approach lets us explore the process interactively. While this can be dynamic and fun, it also means there may be moments where we need to debug or adjust as we go. (next)
 
@@ -102,13 +102,13 @@ Learn more: [Standards of Conduct for BC Public Service employees](https://www2.
 
 ::: notes
 
-Before we begin, I’d like to take a moment to outline our workshop code of conduct. These guidelines are in place to ensure this session remains a positive and productive space for everyone: (next)
+Let us take a moment to share our workshop code of conduct. These guidelines are in place to ensure this session remains a positive and productive space for everyone: (next)
 
 First and foremost, we aim to create a welcoming and supportive environment for all participants, regardless of background. (next)
 
 We encourage respectful discussion and questions throughout the session. Healthy dialogue enriches the learning experience, but it’s important to maintain a tone of mutual respect as teaching and learning in a virtual environment can be hard. (next)
 
-Finally, we ask that you be fully present and engaged during the workshop. Multitasking can wait—this is your opportunity to focus and get the most out of our time together. (next)
+Finally, we ask that you be fully present and engaged during the workshop. Multitasking can wait—this is your opportunity to focus and get the most out of our time together.
 
 By following these principles, we can create a space where everyone feels comfortable and valued. Thanks in advance for your cooperation.
 
@@ -164,7 +164,7 @@ Course Materials: <https://bcgov.github.io/ds-intro-to-git>
 :::
 
 ::: notes
-To give you a clear picture of what we’ll be covering today, here’s an outline of our workshop: (next)
+To give you a clear picture of what we’ll be covering today, here’s an outline of our workshop.  This also can be found in our course materials. (next)
 
 Section 1: What is Version Control for Code. (next)
 We’ll start by exploring the concept of version control, what it is and why it’s an essential practice in modern coding. (next)
@@ -176,9 +176,9 @@ Section 3: Remote Code-Hosting and GitHub. (next)
 In this section, we’ll focus on using GitHub to share and collaborate on code. (next)
 
 Section 4: BCGov GitHub Organization. (next)
-Finally, we’ll discuss coding in the open, leveraging the BCGov GitHub organization to manage and share projects effectively. (next)
+In this section we’ll discuss coding in the open, leveraging the BCGov GitHub organization to manage and share projects effectively. (next)
 
-These icons shown here on the right hand-side of the slide will represent our sections.  You'll see them at the top right hand-side of most of the presentation slides.  This way you'll know which topic or skill we are working on as we progress through the course.
+These icons represent our sections.  You'll see them at the top right hand-side of most of the presentation slides.  If you get lost these are here to to cue you which topic or skill we are working on as we progress through the course.
 
 This structured approach will guide us step-by-step from foundational concepts to practical applications, ensuring you gain both understanding and hands-on experience. 
 
@@ -206,17 +206,15 @@ Learn more: [Software Installation Guide](https://bcgov.github.io/ds-intro-to-gi
 ::: notes
 Before diving into today’s workshop, let’s quickly review the foundational steps you’ve already completed in preparation for this course. (next)
 
-1. You’ve downloaded and installed Git from git-scm.com. This included Git Bash, a terminal that allows you to interact with Git through command-line commands. (next)
+You’ve downloaded and installed Git from the Git website. This included Git Bash, a terminal that allows you to interact with Git through command-line commands. (next)
 
-2. You configured Git by setting up your username and email address, which ensures that every change you commit is associated with your identity. If you need a refresher, the configuration steps can be found here. (next)
+You configured Git by setting up your username and email address, which ensures that every change you commit is associated with your identity. Most of you did this in Git Bash terminal. If you need a refresher, the configuration steps can be found here. (next)
 
-3. You set up a GitHub account, which will allow you to store and collaborate on code projects in a cloud-based repository. As part of this process you enabled Two-Factor Authentication (2MFA) to enhance account security. You also created a Personal Access Token to allow Git to authenticate securely with your GitHub account for operations like pushing or pulling code. (next)
+You set up a GitHub account, which will allow you to store and collaborate on code projects in a cloud-based repository. (next) As part of this process you enabled Two-Factor Authentication (2MFA) to enhance account security. (next) You also created a Personal Access Token to allow Git to authenticate securely with your GitHub account for operations like pushing or pulling code. (next)
 
-4. These steps provided the groundwork for today’s workshop, ensuring you have the tools and configurations necessary to follow along effectively. If you encounter any challenges related to these steps, feel free to drop a question into the chat for assistance. (next)
+These steps provided the groundwork for today’s workshop, ensuring you have the tools and configurations necessary to follow along effectively. If you encounter any challenges related to these steps, feel free to drop a question into the chat for assistance. (next)
 
-5. You will also have configured your email and user name so that git can connect to GitHub. Most of you did this in Git Bash terminal. (next)
-
-Question for Bonnie: do we want to check configuration at some point?
+Question: Do we want to check configuration at some point?
 
 :::
 
@@ -230,11 +228,14 @@ Source: [notFinal.doc](https://phdcomics.com/comics.php?f=1531) by Jorge Cham ©
 :::
 
 ::: notes
+What's version control?
+
 Not this.  But we’ve all been in this situation before: it seems unnecessary to have multiple nearly-identical versions of the same document – either by yourself or spread around among colleagues. It’s difficult to tell the difference between files, and what was changed when, by whom, and why?
 
-Version control is the practice of tracking and managing changes to software code. Version control systems are software tools that are used to help teams manage changes to code/documents over time.
+Version control is the practice of tracking and managing changes to software code. Version control systems (like Git) are software tools that are used to help teams manage changes to code/documents over time.
 
 Consider the following scenario. You and your colleagues have been asked to do an analysis of the Work Environment Survey study to determine if workplace satisfaction has increased or decreased significantly since the start of the pandemic. You and your colleagues want to be able to work on the project at the same time, but have run into problems doing this in the past. If you take turns, each of you will spend a lot of time waiting for the other to finish, but if you work on your own copies and save them to the local network, things will be lost, overwritten, or duplicated. A colleague suggests using version control to manage your work.
+
 
 :::
 
@@ -244,13 +245,13 @@ Consider the following scenario. You and your colleagues have been asked to do a
 ![](/figures/section-2-git/sequential.png){fig-pos="H"}
 
 ::: notes
-Git keeps track of snapshots in time – each document or file starts with a base version and then you tell git to save just the changes you made at each step of the way.
+She mentions she uses Git and provides you an online link. You decide to do some light reading.  You find out git  keeps track of snapshots in time – each document or file starts with a base version and then you tell git to save just the changes you made at each step of the way.
 
 You decide which changes make up the each snapshot, and git stores those changes and keeps useful metadata about them.
 
-You can think of it as a recording of your progress: you can rewind to start at the base document and play back each change you made, eventually arriving at your more recent version.
+You can think of it as a recording of your progress: you can rewind to start at the base document (the one on the left) and play back each change you made, eventually arriving at your more recent version (the one on the right).
 
-Each snapshot is called a ‘commit’.
+Each of these three snapshot are called a ‘commit’.
 
 :::
 
@@ -273,11 +274,14 @@ Each snapshot is called a ‘commit’.
 ::::
 
 ::: notes
-In this example, two users can make independent sets of changes on the same document.
 
-Each can, on their own copy, head off on a different track and work on it independently while keeping the main copy intact.
+But git also allows independent users to make changes on the same document. (next) (next)
 
-When they are finished making changes to their own copy...
+Each can, on their own copy, head off on a different track and work on it independently while keeping the main copy intact. 
+
+In this diagram person green takes a copy and person red also takes a copy.  They add some lines and when they are finished making changes to their own copy...
+
+(next slide)
 
 :::
 
@@ -300,11 +304,11 @@ When they are finished making changes to their own copy...
 
 ::: notes
 
-the changes they want to keep can be merged back into the original. If they don't like the result, the changes can be discarded.
+the changes they want to keep can be merged back into the original. If they don't like the result, the changes can be discarded. (next) 
 
-Unless multiple users make changes to the same section of the document (a conflict) you can incorporate two sets of changes into the same base document.
+Unless multiple users make changes to the same section of the document (a conflict) you can incorporate two sets of changes into the same base document.  (next)
 
-Documents/Repositories can be kept in sync across different computers facilitating collaboration among different people.
+Documents and repositories can be kept in sync across different computers facilitating collaboration among different people.
 
 :::
 
@@ -313,14 +317,14 @@ Documents/Repositories can be kept in sync across different computers facilitati
 
 <br>
 <br>
-*A repository is a data structure that stores **metadata** for a set of files or directory structure, as well as a **historical record of changes** to the to repository.*
+*A repository is a data structure that stores **metadata** for a set of files or directory structure, as well as a **historical record of changes** to the repository.*
 
 ::: notes
-In version control systems, a repository is a data structure that stores metadata for a set of files or directory structure, as well as a historical record of changes to the to repository.
+In version control systems, a **repository** is a data structure that stores metadata for a set of files or directory structure, as well as a historical record of changes to the repository.
 
 You store all of your project files in a folder.
 
-All of the files, plus the complete history for all the files in a that folder make up a repository (repo).
+All of the files, plus the complete history for the files in that folder make up a repository (repo).
 
 :::
 
@@ -352,17 +356,21 @@ WES Project Folder
 
 ::: notes
 
-This slide illustrates the structure of a typical Git repository. Let me walk you through its key components:
+This slide illustrates the structure of a typical Git repository. Let me walk you through its key components: (next)
 
-At the top level, we have the wes-analysis folder, which is the root directory of this repository. This is where all our files and folders for the project are organized.Inside this folder you likely have other project-realted folders such **doc**, which contains documentation files such as a list of acronyms or reports.  **ref** holds reference materials and could store articles and images for visual documentation or presentations. **plots** is where visual outputs like graphs or charts from the analysis are saved. **code** houses the scripts or programming files you're working on, forming the core of the project’s logic.
+At the top level, we have the wes-analysis folder, which is the root directory of this repository. This is where all our files and folders for the project are organized.  Inside this folder you likely have other project-related subfolders such as: 
+ 
+ - **doc** and **ref** containin files such as a list of acronyms, reports, reference materials and possibly articles and images for visual documentation or presentations. This is very much project-dependent. 
+- **plots** is where visual outputs like graphs or charts from the analysis are saved.
+- **code** houses the scripts or programming files you're working on, forming the core of the project’s logic. (next)
 
-**data** contains the raw data files in this hypothetical project.  It’s worth noting that sensitive or private data, like these CSV files, won’t become public as we will give explicit instructions to git to ignore them.
+- **data** contains the raw data files in this hypothetical project.  It’s worth noting that sensitive or private data, like these CSV files, won’t become public as we will give explicit instructions to git to ignore them. (next)
 
-Two important files help manage this repository
+Two important files help manage this repository (next)
 
-The **.git** *directory* is hidden by default and is what makes this a Git repository. It tracks changes to files, allowing us to manage versions of our code and content.
+The **.git** *directory* is hidden by default and is what makes this a Git repository. It tracks changes to files, allowing us to manage versions of our code and content. (next)
 
-The **.gitignore** *file* lists files or patterns we don’t want Git to track—like large data files such as the CSVs. This is a common practice to keep repositories clean and focused on the essential project elements.
+The **.gitignore** *file* lists files or patterns we don’t want Git to track—like large data files such as the CSVs. This is a common practice to keep repositories clean and focused on the essential project elements. (next)
 
 Together, this structure keeps our work organized and ensures that the repository is ready for version control and collaboration.
 
@@ -399,19 +407,19 @@ Together, this structure keeps our work organized and ensures that the repositor
 
 ::: notes
 
-Git is a distributed version control system designed to track changes in files, particularly source code. 
+(next)
 
-Git helps manage versions of your work, making it easy to revert to earlier states or identify when and why changes were made.
+Git is a distributed version control system designed to track changes in files, (next)particularly source code. (next)
 
-It enables multiple people to collaborate on projects while maintaining a detailed history of all changes.  It enables contributors to work simultaneously without overwriting each other’s work.
+Git helps us manage versions of our work, making it easy to revert to earlier states or identify when and why changes were made. (next)
 
-Git supports parallel development, allowing teams to work on different features or fixes without interference.  This is done through Branching and Merging which we will review shortly.
+It enables multiple people to collaborate on projects while maintaining a detailed history of all changes.  It enables contributors to work simultaneously without overwriting each other’s work. (next)
 
-Distributed Model: Every user has a full copy of the repository, meaning most operations require only local files and resources.  (This makes Git extremely fast and reliable).
+Git supports parallel development, allowing teams to work on different features or fixes without interference.  This is done through Branching and Merging which we will review shortly. (next)
+
+Git is a distributed Model, meaning every user has a full copy of the repository.  The benefit here is that operations require only local files and resources.  (This makes Git extremely fast and reliable). (next)
 
 Unlike many version control systems that treat data as a list of file changes over time, Git thinks of data as a series of snapshots of a miniature filesystem. Every time you commit, Git essentially takes a snapshot of your project’s state and stores a reference to it.
-
-Reliability and Integrity:
 
 It’s impossible to change files or directories without Git detecting it. This ensures you don’t lose information in transit or encounter undetected file corruption.
 
@@ -419,13 +427,14 @@ Once a snapshot is committed to Git, it’s incredibly hard to lose, especially 
 
 :::
 
-## Git Jargon {background-image="/figures/section-1-vc/version-control.png" background-size="6%" background-position="85% 6%"}
+## Preview: Git Jargon {background-image="/figures/section-1-vc/version-control.png" background-size="6%" background-position="85% 6%"}
 
 ::::: columns
 ::: {.column width="50%"}
 ::: {.incremental} 
 Basic
--   repo (Repository)
+
+-   repo
 -   stage/add
 -   commit
 -   push
@@ -447,6 +456,9 @@ Intermediate
 :::::
 
 ::: notes
+
+Before we move into live coding, let's preview a few Bash commands.  The commands in the Basic column are ones that we'll use in the workshop.
+
 Stage/Add Usage: `git add [file/directory]` 
 Purpose: Allows you to select which changes will be committed.  
 Definition: Moves changes (new files, modifications, or deletions) in your working directory to the staging area, preparing them to be included in the next commit. 
@@ -505,23 +517,20 @@ $ ls -a                         # List directories and files, including hidden
 ::: notes
 Let’s review some common Bash commands that you’ll use frequently when working with Git and navigating your file system.  
 
-**cd path/to/directory**
-   - This command lets you navigate to a specific directory. Think of it as ‘changing your location’ in the file system.  
-   - If the directory path includes spaces, make sure to enclose it in quotes, like `cd "My Folder"`.  
+**cd path/to/directory**: This command lets you navigate to a specific directory. Think of it as ‘changing your location’ in the file system.  (next)
+   - If the directory path includes spaces, make sure to enclose it in quotes, like `cd "My Folder"`.  (next)
 
-**`cd ..`**  
-   - The `..` represents the parent directory. Using this command moves you up one level in the directory hierarchy. For example, if you’re in a folder called `projects`, `cd ..` will take you back to its parent folder.  
+**`cd ..`**: The `..` represents the parent directory. Using this command moves you up one level in the directory hierarchy. For example, if you’re in a folder called `projects`, `cd ..` will take you back to its parent folder.  (next)
 
-**`mkdir new_directory`**  
-   - This creates a new directory with the specified name. It’s a quick way to organize your files into new folders directly from the command line.  
+**`mkdir new_directory`** :This creates a new directory with the specified name. It’s a quick way to organize your files into new folders directly from the command line.  (next)
 
-**`ls`**  
-   - This lists the contents of the current directory, showing all files and subdirectories. It’s a handy way to see where you are and what’s in your folder.  
+**`ls`**: This lists the contents of the current directory, showing all files and subdirectories. It’s a handy way to see where you are and what’s in your folder.  (next)
 
-**`ls -a`**  
-   - Adding the `-a` flag shows all files, including hidden ones. Hidden files usually start with a dot (`.`), like `.git`, and they’re essential for tasks like managing Git repositories.  
+**`ls -a`** Adding the `-a` flag shows all files, including hidden ones. Hidden files usually start with a dot (`.`), like `.git`, and they’re essential for tasks like managing Git repositories.  (next)
 
 These commands form the foundation of navigating and organizing your files in the terminal, which is key to working effectively with Git."  
+
+(next slide)
 
 :::
 
@@ -544,34 +553,39 @@ $ git restore                       # restore file/s to previous commit
 ::: notes
 "Now, let’s review some essential Git commands you’ll use when working with repositories.  
 
-**`git init`**  
-- This command initializes a Git repository in the current directory. It creates a hidden `.git` folder, which Git uses to track changes to your files. You only need to do this once per project to start version control.  
+**`git init`**: This command initializes a Git repository in the current directory. It creates a hidden `.git` folder, which Git uses to track changes to your files. You only need to do this once per project to start version control.  (next)
 
-**`git status`**  
-- Running this command gives you a snapshot of your repository’s current state. It will show any changes to files, whether they’ve been staged for commit, and if there are untracked files. It’s like your ‘to-do list’ for what’s happening in Git.  
+**`git status`**: Running this command gives you a snapshot of your repository’s current state. It will show any changes to files, whether they’ve been staged for commit, and if there are untracked files. It’s like your ‘to-do list’ for what’s happening in Git.  (next) 
 
-**`git add <filename>`**  
-- This stages a file or changes to a file, adding it to the next commit. Replace `<filename>` with the name of the file you want to add. If you want to stage all changes at once, you can use `git add .`. 
+**`git add <filename>`** : This stages a file or changes to a file, adding it to the next commit. Replace `<filename>` with the name of the file you want to add. If you want to stage all changes at once, you can use `git add .`. (next)
    
    **`git commit -m "commit message"`**  
 - This command takes all the changes in the staging area and commits them to your repository, creating a new snapshot. The `-m` flag allows you to add a message describing the changes, which is critical for understanding your history later.  
 
-**`git log`** 
-- Use this command to view the commit history of your repository. It shows who made the changes, when they were made, and the commit messages. It’s an excellent way to review the progress of your project.  
+**`git log`**: Use this command to view the commit history of your repository. It shows who made the changes, when they were made, and the commit messages. It’s an excellent way to review the progress of your project.  (next)
 
-**`git diff`**  
-- This displays the changes between commits or the differences between your working directory and the last commit. It’s useful for checking exactly what has changed before committing.  
+**`git diff`**:  This displays the changes between commits or the differences between your working directory and the last commit. It’s useful for checking exactly what has changed before committing.  (next)
    
-**`git restore`**  
-- This restores files to a previous commit, effectively undoing changes. It’s handy if you want to discard changes or return a file to a specific version.  
+**`git restore`**:  This restores files to a previous commit, effectively undoing changes. It’s handy if you want to discard changes or return a file to a specific version.  (next)
 
 These commands form the backbone of working with Git. As you use them, you’ll develop a deeper understanding of how Git tracks and manages your work."  
+
+(next slide)
 
 :::
 
 ## The Staging Area {background-image="/figures/section-2-git/git-logo.png" background-size="10%" background-position="85% 6%"}
 
+::: {.fragment}
 ![](/figures/section-2-git/local-repository.png){fig-pos="t" fig-align="center"}
+:::
+::: {.fragment}
+**Best Practice Workflow:**  
+
+- stage and commit changes explicitly
+- **git add \<filename>** and **git commit -m 'message'**
+
+:::
 
 ::: notes
 Your local repository is just “your” folder under version control. 
@@ -583,7 +597,7 @@ Think of Git as taking snapshots of your project’s history.
      **`git add`** tells Git what will be included in the next snapshot by placing files into the staging area.  
      **`git commit`** actually takes the snapshot and makes a permanent record of it.  
 
-If you type `git commit` without staging anything, Git will prompt you to use options like `git commit -a` or `git commit --all`.  which is kind of like gathering everyone to take a group photo.  While these commands gather all changes at once, it’s better to stage manually with `git add`instead of accidentally including changes you didn’t mean to commit.
+If you type `git commit` without staging anything, Git will prompt you to use options like `git commit -a` or `git commit --all`.  which is kind of like gathering everyone to take a group photo.  While these commands gather all changes at once, it’s better to stage manually with `git add`instead of accidentally including changes you didn’t mean to commit. (next)
 
 **Best Practices:**  
    - Always stage changes explicitly to maintain control over what goes into each commit.  
@@ -617,21 +631,20 @@ By staging changes, you’re breaking down your work into manageable, logical pi
 ::::
 
 ::: notes
-GitHub is a platform that hosts Git repositories in the web and provides a web interface to interact with repos. Main Function is to host the 'remote' or main copy of a git repository (project)
-Here are speaking notes for your points:  
-
 Let’s take a closer look at **GitHub**, one of the most widely used hosting services for Git repositories:  
 
+GitHub is a platform that hosts Git repositories in the web and provides a web interface to interact with repos. It's main function is to host the 'remote' or main copy of a git repository (next) 
+
  **Hosting Service for Git Repositories:**   
- At its core, GitHub is a platform for storing and managing Git repositories in the cloud.  It acts as a central hub where your project lives online, making it accessible to team members and collaborators anywhere in the world.  
+ At its core, GitHub is a platform for storing and managing Git repositories in the cloud.  It acts as a central hub where your project lives online, making it accessible to team members and collaborators anywhere in the world.  (next)
 
 **Facilitates Collaboration:**  
 GitHub simplifies working together by enabling multiple people to contribute to the same project seamlessly.  
-With features like pull requests, code reviews, and issue tracking, it ensures that teams can work efficiently and stay organized, even when working remotely.  
+With features like pull requests, code reviews, and issue tracking, it ensures that teams can work efficiently and stay organized, even when working remotely.  (next)
 
 **Breaking Down the Name – Git + Hub:**  
 **Git:** The powerful version control system that tracks changes in your project, keeping a detailed history of your work.  
-**Hub:** A central place for repositories where networking and collaboration happen. Think of it as the meeting point where all your team’s work comes together.  
+**Hub:** A central place for repositories where networking and collaboration happen. Think of it as the meeting point where all your team’s work comes together. 
 
 With GitHub, you’re not just managing your code; you’re enabling teamwork, encouraging innovation, and building a shared space for your projects to thrive. 
 
@@ -645,12 +658,11 @@ With GitHub, you’re not just managing your code; you’re enabling teamwork, e
 
 ::: notes
 
-
 Version control really comes into its own when we begin to collaborate with other people. We already have much of the machinery we need to do this; what we are missing is something that allows us to copy changes from one repository to another.
 
- Imagine this: instead of passing files back and forth, Git allows us to seamlessly share and sync our work across multiple repositories. The magic happens with a central repository—your single source of truth—that lives on the web, in platforms like GitHub. Everyone involved in the project keeps a local copy of this shared repository, making changes and updates on their own computers.  The changes are merged into our source of truth repository in GitHub.
+Imagine this: instead of passing files back and forth, Git allows us to seamlessly share and sync our work across multiple repositories. The magic happens with a central repository—your single source of truth—that lives on the web, in platforms like GitHub. Everyone involved in the project keeps a local copy of this shared repository, making changes and updates on their own computers.  The changes are merged into our source of truth repository in GitHub.
 
-In the pre-workshop you created a GitHub account, linked it with a personal access token (PAT), and configured your system to connect to GitHub. This setup will allow us to create a remote repository, sync it with our local work, and share our progress with collaborators—or even the world."  
+In the pre-workshop you created a GitHub account, linked it with a personal access token (PAT), and configured your system to connect to GitHub. This setup will allow us to create a remote repository, sync it with our local work, and share our progress with collaborators—or even the world.
 
 :::
 
@@ -667,13 +679,11 @@ In the pre-workshop you created a GitHub account, linked it with a personal acce
 ::: notes
 Think of the remote as the “authoritative” version/source/copy. 
 
-If you remember back to the earlier episode where we added and committed our earlier work on mars.txt, we had a diagram of the local repository which looked like this:
+If you remember back to the earlier episode where we added and committed our earlier work on mars.txt, we had a diagram of the local repository which looked like this: (next)
 
-Now that we have two repositories, we need a diagram like this:
+Now that we have two repositories, we need a diagram like this: (next)
 
 Our local repository still contains our earlier work on mars.txt, but the remote repository on GitHub appears empty as it doesn’t contain any files yet.
-
-Now that we have two repositories, we need a diagram like this:
 
 :::
 
@@ -688,7 +698,7 @@ Let's create our first remote repository!
 
 
 ::: notes
-Let’s make our first repository 
+Let’s make our first remote repository 
 
 :::
 
